# magic_console

./: CMakeLists.txt  README.md  main.cpp
src/: magic_display.cpp  magic_show.cpp  magic_show.h  math_handler.cpp  math_handler.h  object_creator.cpp  object_creator.h
